--- a/view/frontend/web/template/payment/tpaycards-form.html
+++ b/view/frontend/web/template/payment/tpaycards-form.html
@@ -27,8 +27,7 @@
                 </div>
                 <div id="cvc_wrapper">
                     <label for="cvc">CVC <span
-                            title="Dla MasterCard, Visa lub Discover, są to przy ostatnie
-             cyfry umieszczone przy podpisie karty.">?</span></label>
+                            title="For MasterCard, Visa or Discover, these are the last three digits placed next to the card's user signature.">?</span></label>
                     <input id="cvc" maxlength="3" type="tel" autocomplete="off" autocompletetype="cc-cvc"
                            placeholder="000"
                            tabindex="4" value=""/>
