--- a/view/frontend/web/template/payment/tpaycards-form.html
+++ b/view/frontend/web/template/payment/tpaycards-form.html
@@ -35,13 +35,13 @@
 
                 <label for="c_name" data-bind="i18n: 'Name'"></label>
 
-                <input type="tel" id="c_name" data-bind="attr: { placeholder: $t('Name') }" autocomplete="off"
+                <input type="text" id="c_name" data-bind="attr: { placeholder: $t('Name') }" autocomplete="off"
                        name="client_name"
                        maxlength="64" tabindex="5" value=""/>
 
                 <label for="c_email" data-bind="i18n: 'E-mail'"></label>
 
-                <input type="tel" id="c_email" data-formance_algorithm="complex" autocomplete="off"
+                <input type="email" id="c_email" data-formance_algorithm="complex" autocomplete="off"
                        data-bind="attr: { placeholder: $t('email@example.com') }"
                        name="client_email" value="" maxlength="64" tabindex="6">
                 <input type="hidden" name="card_data" id="card_data"/>
