Supported credit card types update
Set current supported credit card types to visa and mastercard only

--- a/view/frontend/web/template/payment/tpaycards-form.html
+++ b/view/frontend/web/template/payment/tpaycards-form.html
@@ -45,6 +45,7 @@
                 <div class="card_icon" id="maestro"></div>
                 <div class="card_icon" id="diners"></div>
                 <div class="card_icon" id="jcb"></div>
+                <div class="card_icon" id="amex"></div>
             </div>
 
             <p id="info_msg"></p>
