Card form fixes
Moved validation from jquery.formance to jquery.payment library
Improved not supported cards numbers validation
Fixed pasting the cc number to form errors

--- a/view/base/web/css/tpaycards.css
+++ b/view/base/web/css/tpaycards.css
@@ -219,7 +219,7 @@ textarea:-moz-placeholder {
     background-position: -46px center;
 }
 
-#card_icons #master {
+#card_icons #mastercard {
     background-position: -91px center;
 }
 
@@ -231,7 +231,7 @@ textarea:-moz-placeholder {
     background-position: -184px center;
 }
 
-#card_icons #diners {
+#card_icons #dinersclub {
     background-position: -230px center;
 }
 
