--- a/view/frontend/web/template/payment/tpaycards-form.html
+++ b/view/frontend/web/template/payment/tpaycards-form.html
@@ -55,9 +55,9 @@
 
             <div id="card_icons">
                 <div class="card_icon" id="visa"></div>
-                <div class="card_icon" id="master"></div>
+                <div class="card_icon" id="mastercard"></div>
                 <div class="card_icon" id="maestro"></div>
-                <div class="card_icon" id="diners"></div>
+                <div class="card_icon" id="dinersclub"></div>
                 <div class="card_icon" id="jcb"></div>
                 <div class="card_icon" id="amex"></div>
             </div>
