Update card vendors names
Sync card vendor names with frontend changes in  9d57604859ef73b103e5cdc502644a8c90da158e

--- a/view/base/web/css/tpaycards.css
+++ b/view/base/web/css/tpaycards.css
@@ -335,7 +335,8 @@ img#saved_icon.visa {
     background-position: 0px center;
 }
 
-img#saved_icon.master {
+img#saved_icon.master,
+img#saved_icon.mastercard {
     background-position: -91px center;
 }
 
