--- a/view/frontend/web/template/payment/tpaycards-form.html
+++ b/view/frontend/web/template/payment/tpaycards-form.html
@@ -9,70 +9,109 @@
             <span data-bind="text: getTitle()"></span>
         </label>
     </div>
-    <div class="payment-method-content">
+    <div class="payment-method-content" id="card_payment_form">
         <div class="insidebg">
-
+            <div class="tpay-header-wrapper">
+                <div class="tpay-header-logo">
+                    <img class="tpay-logo" src="https://tpay.com/img/banners/tpay_logo_white.svg"/>
+                </div>
+                <div class="tpay-header-belt"></div>
+            </div>
             <p id="tpayRSA" style="display: none" data-bind="html: getRSAkey()"></p>
-            <div id="powered_by"></div>
-
-            <div id="saved_card_payment" style="visibility: visible">
-                <input type="radio" name="savedId" id="newCard" value="new">
-                <label for="newCard"><!-- ko i18n: 'Pay with a new card' --><!-- /ko -->
-                </label>
-            </div>
-            <div id="card_form" style="display: none">
-            <div id="card_payment">
-                <label for="card_number" data-bind="i18n: 'Card number'"></label>
-                <input id="card_number" pattern="\d*" autocompletetype="cc-number" size="30" type="tel"
-                       autocomplete="off"
-                       maxlength="23" placeholder="0000 0000 0000 0000" tabindex="1" value=""/>
-
-                <div id="expiry_date_wrapper">
-                    <label for="expiry_date" data-bind="i18n: 'Expiration date'"></label>
-                    <input id="expiry_date" maxlength="9" type="tel" placeholder="00 / 00" autocomplete="off"
-                           autocompletetype="cc-exp" tabindex="2" value=""/>
+            <div class="tpay-panel-inside-content">
+                <div id="saved_card_payment" style="visibility: visible" class="tpay-cards-choice">
+                    <input type="radio" name="savedId" id="newCard" value="new">
+                    <label for="newCard"><!-- ko i18n: 'Pay with a new card' --><!-- /ko -->
+                    </label>
                 </div>
-                <div id="cvc_wrapper">
-                    <label for="cvc"><!-- ko i18n: 'CVC' --><!-- /ko --><span
-                            data-bind="
-                        attr: {title: $t('For MasterCard, Visa or Discover, these are the last three digits placed next to the card user signature.')}
-                        ">?</span></label>
-                    <input id="cvc" maxlength="3" type="tel" autocomplete="off" autocompletetype="cc-cvc"
-                           placeholder="000"
-                           tabindex="4" value=""/>
-                </div>
-                <div class="amPmCheckbox">
-                    <input type="checkbox" id="card_save" name="card_save"/>
-                    <label for="card_save"><!-- ko i18n: 'Save my card' --><!-- /ko --><span
-                            data-bind="
+                <div class="tpay-channel-form-wrapper tpay-content-wrapper-class">
+                    <div id="card_form" style="display: none">
+                        <div id="card_payment" class="tpay-input-wrapper">
+                            <div class="tpay-col">
+                                <div class="tpay-row">
+                                    <div class="tpay-input-wrapper">
+                                        <div class="tpay-input-credit-card-number">
+                                            <div class="tpay-input-label"><!-- ko i18n: 'Card number' -->
+                                                <!-- /ko --></div>
+                                            <input id="card_number"
+                                                   pattern="\d*"
+                                                   autocompletetype="cc-number"
+                                                   size="30"
+                                                   type="tel"
+                                                   autocomplete="off"
+                                                   maxlength="23"
+                                                   placeholder="XXXX XXXX XXXX XXXX"
+                                                   tabindex="1"
+                                                   value=""
+                                                   class="tpay-input-value"
+                                            />
+                                            <div class="tpay-card-icon "></div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+                            <div class="tpay-col">
+                                <div class="tpay-row">
+                                    <div class="tpay-expiration-date-input tpay-input-wrapper">
+                                        <div class="tpay-input-label">
+                                            <!-- ko i18n: 'Expiration date' --><!-- /ko -->
+                                        </div>
+                                        <input id="expiry_date"
+                                               maxlength="9"
+                                               type="tel"
+                                               placeholder="01 / 2020"
+                                               autocomplete="off"
+                                               autocompletetype="cc-exp"
+                                               tabindex="2"
+                                               value=""
+                                               class="tpay-input-value"
+                                        />
+                                    </div>
+                                    <div class="tpay-cvv-input tpay-input-wrapper">
+                                        <div class="tpay-input-label tpay-input-cvc"
+                                             data-bind="attr: {title: $t('For MasterCard, Visa or Discover, these are the last three digits placed next to the card user signature.')}"
+                                        >
+                                            <!-- ko i18n: 'CVC' --><!-- /ko -->
+                                        </div>
+                                        <input id="cvc"
+                                               maxlength="4"
+                                               type="tel"
+                                               autocomplete="off"
+                                               autocompletetype="cc-cvc"
+                                               placeholder="XXX"
+                                               tabindex="3"
+                                               value=""
+                                               class="tpay-input-value"
+                                        />
+                                    </div>
+                                </div>
+                            </div>
+                            <span data-bind="html: showSaveBox()"></span>
+                            <input type="hidden" name="card_data" id="card_data"/>
+                            <input type="hidden" name="card_vendor" id="card_vendor"/>
+                        </div>
+                        <div class="tpay-amPmCheckbox" id="tpay-card-save-checkbox" style="display: none">
+                            <input type="checkbox" id="card_save" name="card_save"/>
+                            <label for="card_save" class="tpay-info-label" data-bind="
                         attr: {title: $t('Allow to pay faster for next orders. Card data will be stored on secure tpay.com server.')}
-                        "> ?</span></label>
-                </div>
-                <span data-bind="html: showSaveBox()"></span>
-                <input type="hidden" name="card_data" id="card_data"/>
-                <input type="hidden" name="card_vendor" id="card_vendor"/>
-            </div>
+                        "
+                            ><!-- ko i18n: 'Save my card' --><!-- /ko -->
+                            </label>
+                        </div>
 
-            <div id="card_icons">
-                <div class="card_icon" id="visa"></div>
-                <div class="card_icon" id="mastercard"></div>
-                <div class="card_icon" id="maestro"></div>
-                <div class="card_icon" id="dinersclub"></div>
-                <div class="card_icon" id="jcb"></div>
-                <div class="card_icon" id="amex"></div>
-            </div>
-            </div>
-            <p id="info_msg"></p>
-
-            <div id="loading_scr" style="display:none"><img
-                    data-bind="
+                        <p id="info_msg"></p>
+                        <div id="loading_scr" style="display:none"><img
+                                data-bind="
                         attr: {src: getTpayLoadingGif()}"
-                    style="vertical-align: middle;"/>&nbsp;&nbsp;<!-- ko i18n: 'Processing data, please wait...' -->
-                <!-- /ko -->
+                                style="vertical-align: middle;"/>
+                            <!-- ko i18n: 'Processing data, please wait...' -->
+                            <!-- /ko -->
+                        </div>
+                    </div>
+                </div>
             </div>
-
         </div>
-
         <span data-bind="html: fetchJavaScripts()"></span>
 
         <span data-bind="html: addCSS()"></span>
@@ -89,7 +128,6 @@
             <!-- ko template: getTemplate() --><!-- /ko -->
             <!--/ko-->
         </div>
-
         <div class="actions-toolbar">
             <div class="primary">
                 <button class="action primary checkout"
